# cpp_shopping

./: .gitignore  CMakeLists.txt  build.bat
source/: main.cpp
source/include/: http_server.hpp  json_utils.hpp  orm_rttr.hpp  router.hpp  websocket_server.hpp
source/include/entity/: sys_entities.hpp  sys_entities_mapping.hpp  sys_sql_generator.hpp  sys_user_sql_test.hpp
source/src/: http_server.cpp  init_log.cpp  json_utils.cpp  main.cpp  router.cpp  websocket_server.cpp
source/tests/: test_join_query.cpp  test_orm_pfr.cpp  test_user_sql.cpp
sql/: rbac.sql
